# git-analyzer

./: .env.example  README.md  combined_prompt.txt  pyproject.toml  requirements.txt
source/: main.py  utils.py
source/agents/: analyze_agent.py  review_agent.py  summary_agent.py
source/prompts/: prompt_agents.py  prompt_tool.py
source/tools/: get_file_content.py  search_risk_info.py
