[project]
name = "ga"
version = "0.1.0"
description = "A CLI tool to analyze git commits for security and performance risks using AI agents."
authors = [
    { name = "Minh Nguyen", email = "nguyenhuutuanminhkh@gmail.com" }
]
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "crewai",
    "crewai-tools",
]

[project.scripts]
ga = "source.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
